<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
    <device id="retina4_7" orientation="portrait">
        <adaptation id="fullscreen"/>
    </device>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13174"/>
        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <objects>
        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
        <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
        <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" id="KGk-i7-Jjw" customClass="MWSMoviesListCell">
            <rect key="frame" x="0.0" y="0.0" width="320" height="66"/>
            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                <rect key="frame" x="0.0" y="0.0" width="287" height="65.5"/>
                <autoresizingMask key="autoresizingMask"/>
                <subviews>
                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UbF-C4-9kh">
                        <rect key="frame" x="8" y="8" width="42" height="21"/>
                        <accessibility key="accessibilityConfiguration" identifier="Name"/>
                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                        <nil key="textColor"/>
                        <nil key="highlightedColor"/>
                    </label>
                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2WX-a5-SEx">
                        <rect key="frame" x="8" y="37" width="42" height="21"/>
                        <accessibility key="accessibilityConfiguration" identifier="Date"/>
                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                        <nil key="textColor"/>
                        <nil key="highlightedColor"/>
                    </label>
                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4Be-aN-Kbo">
                        <rect key="frame" x="237" y="37" width="42" height="21"/>
                        <accessibility key="accessibilityConfiguration" identifier="Rating"/>
                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                        <nil key="textColor"/>
                        <nil key="highlightedColor"/>
                    </label>
                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OV4-Qc-A3H">
                        <rect key="frame" x="237" y="8" width="42" height="21"/>
                        <accessibility key="accessibilityConfiguration" identifier="Mpaa"/>
                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                        <nil key="textColor"/>
                        <nil key="highlightedColor"/>
                    </label>
                </subviews>
                <constraints>
                    <constraint firstItem="2WX-a5-SEx" firstAttribute="leading" secondItem="UbF-C4-9kh" secondAttribute="leading" id="0cP-du-T56"/>
                    <constraint firstAttribute="trailingMargin" secondItem="OV4-Qc-A3H" secondAttribute="trailing" id="58m-Y4-eQG"/>
                    <constraint firstItem="2WX-a5-SEx" firstAttribute="top" secondItem="UbF-C4-9kh" secondAttribute="bottom" constant="8" id="9Rv-4B-5P0"/>
                    <constraint firstAttribute="bottomMargin" secondItem="2WX-a5-SEx" secondAttribute="bottom" id="Au3-vp-mlO"/>
                    <constraint firstItem="UbF-C4-9kh" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="B1l-Xe-DOR"/>
                    <constraint firstItem="UbF-C4-9kh" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="IWc-xp-hpB"/>
                    <constraint firstItem="4Be-aN-Kbo" firstAttribute="trailing" secondItem="OV4-Qc-A3H" secondAttribute="trailing" id="iGV-5D-ExA"/>
                    <constraint firstItem="4Be-aN-Kbo" firstAttribute="centerY" secondItem="2WX-a5-SEx" secondAttribute="centerY" id="j1a-d4-JaT"/>
                    <constraint firstItem="OV4-Qc-A3H" firstAttribute="centerY" secondItem="UbF-C4-9kh" secondAttribute="centerY" id="xeX-VL-tC2"/>
                </constraints>
            </tableViewCellContentView>
            <connections>
                <outlet property="date" destination="2WX-a5-SEx" id="t73-KF-DIL"/>
                <outlet property="mpaaRating" destination="OV4-Qc-A3H" id="EMv-wc-Whq"/>
                <outlet property="name" destination="UbF-C4-9kh" id="ccP-pm-6jD"/>
                <outlet property="rating" destination="4Be-aN-Kbo" id="yFl-N4-QMN"/>
            </connections>
            <point key="canvasLocation" x="34" y="61"/>
        </tableViewCell>
    </objects>
</document>
